2004-02-24  Henrique de Moraes Holschuh <hmh@debian.org>

	* interface/Makefile.am (install.dynamics): The Dynamic interfaces
	  need the .txt files installed too.
	* doc/C/timidity.cfg.5: Fix English expressions
	* common.makefile.in (ELISP_DIR): Bug fix

2004-02-24  mput <root@mput.dip.jp>

	* configure.in: ALSA 1.0 support for alsaseq interface, thanks to
	  <hmh@debian.org>

2004-02-23  Saito <saito2@digitalme.com>

	* interface/w32g_res.[h,rc], interface/w32g_i.c,
	  interface/w32g_subwin.c, interface/w32g_pref.c, interface/w32g_icon.ico:
	  Change and add some items.

2004-02-22  Saito <saito2@digitalme.com>

	* timidity/reverb.c, timidity/playmidi.c:
	  Fix bug of opt_pan_delay with opt_surround_chorus.
	* timidity/sndfont.c:
	  Fix around memory allocation.

2004-02-22 Kentaro Sato <kentaro@ranvis.com>

	* timidity/mac_a.c: Support 8/24-bit output and PF_BUFF_FRAGM_OPT.
	* timidity/aiff_a.c, timidity/smplfile.c: Fixed padding bug.

2004-02-21  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/instrum.c: Beautify and fix typo

2004-02-21  Saito <saito2@digitalme.com>

	* interface/w32g_pref.c:
	  Fix "force cfg reload".
	* timidity/sndfont.c:
	  Fix.
	* timidity/tables.[ch], timidity/mix.c:
	  Put together modulation envelope tables.

2004-02-20  Saito <saito2@digitalme.com>

	* interface/w32g_icon.ico, interface/w32g_res.{rc,h},
	  interface/w32g_i.c, interface/w32g_subwin.c,
	  interface/w32g_subwin2.c, interface/w32g_subwin3.c,
	  interface/w32g_syn.c:
	  Change icons.
	* interface/w32g_syn_icon.ico:
	  Add this file.

2004-02-19  Saito <saito2@digitalme.com>

	* timidity/tables.c:
	  Fix volume table of modulation envelope (incomplete).

2004-02-18 Kentaro Sato <kentaro@ranvis.com>

	* timidity/resample.c: Fixed noise of c-spline/lagrange/linear.

2004-02-18  Saito <saito2@digitalme.com>

	* timidity/reverb.[ch], timidity/playmidi.c, timidity/readmidi.c:
	  Clean up around chorus effect.
	  Fix bug of opt_pan_delay with opt_surround_chorus.