@@ -388,8 +388,13 @@ AC_CHECK_HEADERS( \
   sys/sysctl.h \
   termios.h \
   unistd.h \
-  X11/extensions/XShm.h \
-  X11/Xmu/ExtAgent.h])
+  X11/Xlib.h])
+AC_CHECK_HEADERS(\
+  [X11/extensions/XShm.h X11/Xmu/ExtAgent.h],[],[],[
+#ifdef HAVE_X11_XLIB_H
+#include <X11/Xlib.h>
+#endif
+  ])
 AC_CHECK_HEADER(string.h,, [ AC_DEFINE(NO_STRING_H,1,Define to 1 if you do not have <string.h>.)])
 
 # Checks for typedefs, structures, and compiler characteristics.
